--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ androidxUiAutomator = "2.3.0"
 androidxWork = "2.10.2"
 androidDesugarJdkLibs = "2.1.5"
 accompanist = "0.37.3"
+accompanistPlaceholder = "0.36.0"
 coil = "2.7.0"
 firebaseBom = "33.16.0"
 hilt = "2.56.2"
@@ -68,25 +69,25 @@ kmmVoyager = "1.0.1"
 kmmLogs = "2.7.1"
 gson = "2.13.1"
 
-nordic-blek = "2.0.0-alpha02"
-nordic-ble = "2.10.1"
+nordic-blek = "2.0.0-alpha03"
+nordic-ble = "2.10.2"
 nordic-dfu = "2.9.0"
 nordic-log = "2.5.0"
 nordic-data = "0.4.0"
 nordic-wifi = "1.3.0"
 nordic-mcumgr = "2.5.0"
 nordic-scanner = "1.6.0"
-nordic-common = "2.4.0"
+nordic-common = "2.5.0"
 nordic-memfault = "1.1.0"
 
-nordicPlugins = "2.7"
+nordicPlugins = "2.8"
 dokkaPlugin = "2.0.0"
 googleServicesPlugins = "4.4.2"
 firebaseCrashlyticsPlugins = "3.0.2"
 kmmIosPublishPlugin = "2.0.3"
 
 [libraries]
-accompanist-placeholder = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist" }
+accompanist-placeholder = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanistPlaceholder" }
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
