--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,12 @@
         "/com.google.devtools.ksp/",
         "/org.jetbrains.kotlin.*/"
       ]
+    },
+    {
+      "matchPackageNames": [
+        "com.google.firebase:firebase-bom"
+      ],
+      "enabled": false
     }
   ]
 }
