--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,7 +51,7 @@ room = "2.7.2"
 paging = "3.3.6"
 secrets = "2.0.1"
 turbine = "1.2.1"
-markdown = "0.5.0" # https://github.com/jeziellago/compose-markdown/releases
+markdown = "0.5.7" # https://github.com/jeziellago/compose-markdown/releases
 wirePlugin = "5.4.0"
 timber = "5.0.1"
 chart = "v3.1.0"
@@ -248,7 +248,7 @@ nordic-blek-client-core = { group = "no.nordicsemi.kotlin.ble", name = "client-c
 nordic-blek-client-core-android = { group = "no.nordicsemi.kotlin.ble", name = "client-core-android", version.ref = "nordic-blek" }
 nordic-blek-client-android = { group = "no.nordicsemi.kotlin.ble", name = "client-android", version.ref = "nordic-blek" }
 nordic-blek-client-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "client-android-mock", version.ref = "nordic-blek" }
-nordic-blek-advertiser-core = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-core", version.ref = "nordic-blek" }
+nordic-blek-advertiser-core = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-core", version.ref = "nordic-blek" }
 nordic-blek-advertiser-core-android = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-core-android", version.ref = "nordic-blek" }
 nordic-blek-advertiser-android = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android", version.ref = "nordic-blek" }
 nordic-blek-advertiser-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-mock", version.ref = "nordic-blek" }
