--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,17 +70,7 @@ kmmVoyager = "1.0.1"
 kmmLogs = "2.7.1"
 gson = "2.13.2"
 
-nordic-blek = "2.0.0-alpha08"
-nordic-ble = "2.11.0"
-nordic-dfu = "2.9.0"
-nordic-log = "2.5.0"
-nordic-data = "0.4.0"
-nordic-wifi = "1.3.0"
-nordic-mcumgr = "2.7.3"
-nordic-scanner = "1.6.0"
-nordic-common = "2.5.4"
-nordic-memfault = "2.0.2"
-
+# Plugin versions
 nordicPlugins = "2.10"
 dokkaPlugin = "2.0.0"
 googleServicesPlugins = "4.4.2"
@@ -215,44 +205,6 @@ kmm-voyager = { group = "cafe.adriel.voyager", name = "voyager-navigator", versi
 kmm-logs = { group = "io.github.aakira", name = "napier", version.ref = "kmmLogs" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
-# Nordic
-nordic-ble = { group = "no.nordicsemi.android", name = "ble", version.ref = "nordic-ble" }
-nordic-ble-ktx = { group = "no.nordicsemi.android", name = "ble-ktx", version.ref = "nordic-ble" }
-nordic-ble-common = { group = "no.nordicsemi.android", name = "ble-common", version.ref = "nordic-ble" }
-nordic-dfu = { group = "no.nordicsemi.android", name = "dfu", version.ref = "nordic-dfu" }
-nordic-mcumgr-core = { group = "no.nordicsemi.android", name = "mcumgr-core", version.ref = "nordic-mcumgr" }
-nordic-mcumgr-ble = { group = "no.nordicsemi.android", name = "mcumgr-ble", version.ref = "nordic-mcumgr" }
-nordic-log = { group = "no.nordicsemi.android", name = "log", version.ref = "nordic-log" }
-nordic-log-timber = { group = "no.nordicsemi.android", name = "log-timber", version.ref = "nordic-log" }
-nordic-compat-scanner = { group = "no.nordicsemi.android.support.v18", name = "scanner", version.ref = "nordic-scanner" }
-nordic-kotlin-data = { group = "no.nordicsemi.kotlin", name = "data", version.ref = "nordic-data" }
-nordic-core = { group = "no.nordicsemi.android.common", name = "core", version.ref = "nordic-common" }
-nordic-ui = { group = "no.nordicsemi.android.common", name = "ui", version.ref = "nordic-common" }
-nordic-theme = { group = "no.nordicsemi.android.common", name = "theme", version.ref = "nordic-common" }
-nordic-scanner-ble = { group = "no.nordicsemi.android.common", name = "scanner-ble", version.ref = "nordic-common" }
-nordic-analytics = { group = "no.nordicsemi.android.common", name = "analytics", version.ref = "nordic-common" }
-nordic-navigation = { group = "no.nordicsemi.android.common", name = "navigation", version.ref = "nordic-common" }
-nordic-logger = { group = "no.nordicsemi.android.common", name = "logger", version.ref = "nordic-common" }
-nordic-permissions-nfc = { group = "no.nordicsemi.android.common", name = "permissions-nfc", version.ref = "nordic-common" }
-nordic-permissions-ble = { group = "no.nordicsemi.android.common", name = "permissions-ble", version.ref = "nordic-common" }
-nordic-permissions-internet = { group = "no.nordicsemi.android.common", name = "permissions-internet", version.ref = "nordic-common" }
-nordic-permissions-wifi = { group = "no.nordicsemi.android.common", name = "permissions-wifi", version.ref = "nordic-common" }
-nordic-permissions-notification = { group = "no.nordicsemi.android.common", name = "permissions-notification", version.ref = "nordic-common" }
-nordic-wifi-ble = { group = "no.nordicsemi.android.wifi", name = "provisioning-ble", version.ref = "nordic-wifi" }
-nordic-wifi-softap = { group = "no.nordicsemi.android.wifi", name = "provisioning-softap", version.ref = "nordic-wifi" }
-nordic-wifi-nfc = { group = "no.nordicsemi.android.wifi", name = "provisioning-nfc", version.ref = "nordic-wifi" }
-nordic-memfault = { group = "no.nordicsemi.android", name = "memfault", version.ref = "nordic-memfault" }
-
-# BleK
-nordic-blek-client-core = { group = "no.nordicsemi.kotlin.ble", name = "client-core", version.ref = "nordic-blek" }
-nordic-blek-client-core-android = { group = "no.nordicsemi.kotlin.ble", name = "client-core-android", version.ref = "nordic-blek" }
-nordic-blek-client-android = { group = "no.nordicsemi.kotlin.ble", name = "client-android", version.ref = "nordic-blek" }
-nordic-blek-client-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "client-android-mock", version.ref = "nordic-blek" }
-nordic-blek-advertiser-core = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-core", version.ref = "nordic-blek" }
-nordic-blek-advertiser-core-android = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-core-android", version.ref = "nordic-blek" }
-nordic-blek-advertiser-android = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android", version.ref = "nordic-blek" }
-nordic-blek-advertiser-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-mock", version.ref = "nordic-blek" }
-
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -260,6 +212,7 @@ compose-gradlePlugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-
 dokka-gradlePlugin = { group = "org.jetbrains.dokka", name = "dokka-gradle-plugin", version.ref = "dokkaPlugin" }
 
 [plugins]
+# Nordic Plugins defined in this project
 nordic-application = { id = "no.nordicsemi.android.plugin.application", version.ref = "nordicPlugins" }
 nordic-application-compose = { id = "no.nordicsemi.android.plugin.application.compose", version.ref = "nordicPlugins" }
 nordic-library = { id = "no.nordicsemi.android.plugin.library", version.ref = "nordicPlugins" }
@@ -271,6 +224,8 @@ nordic-kotlin-jvm = { id = "no.nordicsemi.jvm.plugin.kotlin", version.ref = "nor
 nordic-nexus-android = { id = "no.nordicsemi.android.plugin.nexus", version.ref = "nordicPlugins" }
 nordic-nexus-jvm = { id = "no.nordicsemi.jvm.plugin.nexus", version.ref = "nordicPlugins" }
 nordic-dokka = { id = "no.nordicsemi.plugin.dokka", version.ref = "nordicPlugins" }
+
+# External Plugins
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 android-test = { id = "com.android.test", version.ref = "androidGradlePlugin" }
