--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,20 +5,26 @@ ksp = "2.2.20-2.0.4"
 androidxActivity = "1.11.0"
 androidxAnnotation = "1.9.1"
 androidxAppCompat = "1.7.1"
+androidxCardview = "1.0.0"
+androidxConstraintlayout = "2.2.1"
 androidxComposeBom = "2025.10.00" # https://developer.android.com/jetpack/compose/bom/bom-mapping
 androidxComposeRuntimeTracing = "1.9.3"
 androidxCore = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.1.7"
 androidxEspresso = "3.7.0"
+androidxFragment = "1.8.9"
 androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.9.4"
 androidxLocalbroadcastmanager = "1.1.0"
 androidxMacroBenchmark = "1.4.1"
 androidxNavigation = "2.9.5"
 androidxMetrics = "1.0.0"
+androidxPreference = "1.2.1"
 androidxProfileinstaller = "1.4.1"
+androidxRecyclerview = "1.4.0"
 androidxStartup = "1.2.0"
+androidxSwiperefreshlayout = "1.1.0"
 androidxWindowManager = "1.5.0"
 androidxTestCore = "1.7.0"
 androidxTestExt = "1.3.0"
@@ -82,7 +88,14 @@ kmmIosPublishPlugin = "2.0.3"
 accompanist-placeholder = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanistPlaceholder" }
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "androidxActivity" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
+androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "androidxCardview" }
+androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidxConstraintlayout" }
+androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
+androidx-preference = { module = "androidx.preference:preference", version.ref = "androidxPreference" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidxRecyclerview" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidxSwiperefreshlayout" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "androidxAnnotation" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxMacroBenchmark" }
