--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-androidGradlePlugin = "8.13.0"
-kotlin = "2.2.20" # When changes, update also kotlinAndroid.kt
-ksp = "2.2.20-2.0.4"
-androidxActivity = "1.11.0"
+androidGradlePlugin = "8.13.2"
+kotlin = "2.2.21" # When changes, update also kotlinAndroid.kt
+ksp = "2.3.3"
+androidxActivity = "1.11.0" # Don't update
 androidxAnnotation = "1.9.1"
 androidxAppCompat = "1.7.1"
 androidxCardview = "1.0.0"
@@ -10,29 +10,29 @@ androidxConstraintlayout = "2.2.1"
 androidxComposeBom = "2025.10.00" # https://developer.android.com/jetpack/compose/bom/bom-mapping
 androidxComposeRuntimeTracing = "1.9.3"
 androidxCore = "1.17.0"
-androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.1.7"
+androidxCoreSplashscreen = "1.2.0"
+androidxDataStore = "1.2.0"
 androidxEspresso = "3.7.0"
 androidxFragment = "1.8.9"
 androidxHiltNavigationCompose = "1.2.0"
-androidxLifecycle = "2.9.4"
+androidxLifecycle = "2.9.4" # Don't update
 androidxLocalbroadcastmanager = "1.1.0"
 androidxMacroBenchmark = "1.4.1"
-androidxNavigation = "2.9.5"
+androidxNavigation = "2.9.6"
 androidxMetrics = "1.0.0"
 androidxPreference = "1.2.1"
 androidxProfileinstaller = "1.4.1"
 androidxRecyclerview = "1.4.0"
 androidxStartup = "1.2.0"
-androidxSwiperefreshlayout = "1.1.0"
-androidxWindowManager = "1.5.0"
+androidxSwiperefreshlayout = "1.2.0"
+androidxWindowManager = "1.5.1"
 androidxTestCore = "1.7.0"
 androidxTestExt = "1.3.0"
 androidxTestRunner = "1.7.0"
 androidxTestRules = "1.7.0"
 androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
-androidxWork = "2.10.5"
+androidxWork = "2.10.5" # Don't update
 androidDesugarJdkLibs = "2.1.5"
 accompanist = "0.37.3"
 accompanistPlaceholder = "0.36.0"
@@ -45,17 +45,17 @@ junit4 = "4.13.2"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
 kotlinxSerializationJson = "1.9.0"
-kotlinCompose = "1.9.1"
+kotlinCompose = "1.9.3"
 javaAnnotations = "26.0.2-1" # https://github.com/JetBrains/java-annotations
-lint = "31.13.0"
+lint = "31.13.1"
 material = "1.13.0"
 memfault-cloud = "2.0.5"
-okhttp = "5.2.1"
-protobuf = "4.33.0"
+okhttp = "5.3.2"
+protobuf = "4.33.2"
 protobufPlugin = "0.9.5"
 publishPlugin = "2.0.0"
 retrofit = "3.0.0"
-room = "2.7.2"
+room = "2.7.2" # Don't update
 paging = "3.3.6"
 secrets = "2.0.1"
 turbine = "1.2.1"
@@ -64,7 +64,7 @@ wirePlugin = "5.4.0"
 timber = "5.0.1"
 chart = "v3.1.0"
 leakcanary = "2.14"
-mockk = "1.14.6"
+mockk = "1.14.7"
 truth = "1.4.5"
 slf4j = "2.0.17"
 slf4j-timber = "1.2"
@@ -80,7 +80,7 @@ gson = "2.13.2"
 fasterxml = "2.13.5" # don't update
 
 # Plugin versions
-nordicPlugins = "2.11"
+nordicPlugins = "2.11" # Freeze at 2.11. Version 2.12 increases minSdk to 23.
 dokkaPlugin = "2.1.0"
 googleServicesPlugins = "4.4.2"
 firebaseCrashlyticsPlugins = "3.0.2"
