--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-androidGradlePlugin = "8.13.2"
+androidGradlePlugin = "9.0.0"
 kotlin = "2.3.0" # When changes, update also kotlinAndroid.kt
-ksp = "2.3.4"
+ksp = "2.3.5"
 androidxActivity = "1.11.0" # Don't update
 androidxAnnotation = "1.9.1"
 androidxAppCompat = "1.7.1"
@@ -14,11 +14,11 @@ androidxCoreSplashscreen = "1.2.0"
 androidxDataStore = "1.2.0"
 androidxEspresso = "3.7.0"
 androidxFragment = "1.8.9"
-androidxHiltNavigationCompose = "1.2.0"
+androidxHiltNavigationCompose = "1.3.0"
 androidxLifecycle = "2.9.4" # Don't update
 androidxLocalbroadcastmanager = "1.1.0"
 androidxMacroBenchmark = "1.4.1"
-androidxNavigation = "2.9.6"
+androidxNavigation = "2.9.7"
 androidxMetrics = "1.0.0"
 androidxPreference = "1.2.1"
 androidxProfileinstaller = "1.4.1"
@@ -37,39 +37,39 @@ androidDesugarJdkLibs = "2.1.5"
 accompanist = "0.37.3"
 accompanistPlaceholder = "0.36.0"
 coil = "2.7.0"
-dagger = "2.57.2"
+dagger = "2.59"
 firebaseBom = "33.16.0" # https://firebase.google.com/support/release-notes/android#2025-07-21 minSdkVersion increased from 21 to 23
-hilt = "2.57.2"
-hiltExt = "1.2.0"
+hilt = "2.59"
+hiltExt = "1.3.0"
 junit4 = "4.13.2"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1-0.6.x-compat"
-kotlinxSerializationJson = "1.9.0"
-kotlinCompose = "1.9.3"
+kotlinxSerializationJson = "1.10.0"
+kotlinCompose = "1.10.0"
 javaAnnotations = "26.0.2-1" # https://github.com/JetBrains/java-annotations
-lint = "31.13.1"
+lint = "32.0.0"
 material = "1.13.0"
-memfault-cloud = "2.0.5"
+memfault-cloud = "2.1.0"
 okhttp = "5.3.2"
-protobuf = "4.33.2"
-protobufPlugin = "0.9.5"
+protobuf = "4.33.5"
+protobufPlugin = "0.9.6"
 publishPlugin = "2.0.0"
 retrofit = "3.0.0"
 room = "2.7.2" # Don't update
-paging = "3.3.6"
+paging = "3.3.6" # Don't update
 secrets = "2.0.1"
 turbine = "1.2.1"
 markdown = "0.5.7" # https://github.com/jeziellago/compose-markdown/releases
-wirePlugin = "5.4.0"
+wirePlugin = "5.5.0"
 timber = "5.0.1"
 chart = "v3.1.0"
 leakcanary = "2.14"
-mockk = "1.14.7"
+mockk = "1.14.9"
 truth = "1.4.5"
 slf4j = "2.0.17"
 slf4j-timber = "1.2"
-robolectric = "4.16"
-skydovesBallon = "1.6.13"
+robolectric = "4.16.1"
+skydovesBallon = "1.7.3"
 moshi = "1.15.2"
 koinCore = "4.1.1"
 koinCompose = "4.1.1"
